--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.1",
     "clsx": "^2.1.1",
+    "ethers": "5",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
