--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
+    "@tailwindcss/typography": "^0.5.15",
     "clsx": "^2.1.1",
     "ethers": "5",
     "next": "14.2.13",
