--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-slider": "^1.2.1",
     "@tailwindcss/typography": "^0.5.15",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
