--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-slider": "^1.2.1",
     "@tailwindcss/typography": "^0.5.15",
+    "chart.js": "^4.4.6",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "clsx": "^2.1.1",
     "d3": "^7.9.0",
+    "date-fns": "^4.1.0",
     "ethers": "5",
     "next": "14.2.13",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "reactflow": "^11.11.4",
