--- a/package.json
+++ b/package.json
@@ -1,51 +1,77 @@
 {
-  "name": "syb-frontend",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "jest"
-  },
-  "dependencies": {
-    "@ethersproject/providers": "^5.7.2",
-    "@radix-ui/react-checkbox": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-slider": "^1.2.1",
-    "@tailwindcss/typography": "^0.5.15",
-    "chart.js": "^4.4.6",
-    "chartjs-adapter-date-fns": "^3.0.0",
-    "clsx": "^2.1.1",
-    "d3": "^7.9.0",
-    "date-fns": "^4.1.0",
-    "ethers": "5",
-    "next": "14.2.13",
-    "react": "^18",
-    "react-chartjs-2": "^5.2.0",
-    "react-dom": "^18",
-    "react-icons": "^5.3.0",
-    "reactflow": "^11.11.4",
-    "tailwind-merge": "^2.5.2"
-  },
-  "devDependencies": {
-    "@testing-library/jest-dom": "^6.6.2",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.14",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.13",
-    "jest": "^29.7.0",
-    "jest-environment-jsdom": "^29.7.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
-    "ts-jest": "^29.2.5",
-    "ts-node": "^10.9.2",
-    "typescript": "^5"
-  }
+	"name": "syb-frontend",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"test": "jest --passWithNoTests",
+		"lint:fix": "next lint --fix",
+		"lint:strict": "next lint '*/**/*.{js,jsx,ts,tsx}'",
+		"prettier": "prettier --write */**/*.{js,jsx,json,ts,tsx,scss,css,md}",
+		"prepare": "husky",
+		"format": "prettier --write .",
+		"eslint": "eslint . --ext .js,.jsx,.ts,.tsx"
+	},
+	"dependencies": {
+		"@ethersproject/providers": "^5.7.2",
+		"@radix-ui/react-checkbox": "^1.1.1",
+		"@radix-ui/react-dialog": "^1.1.2",
+		"@radix-ui/react-dropdown-menu": "^2.1.2",
+		"@radix-ui/react-slider": "^1.2.1",
+		"@tailwindcss/typography": "^0.5.15",
+		"chart.js": "^4.4.6",
+		"chartjs-adapter-date-fns": "^3.0.0",
+		"clsx": "^2.1.1",
+		"d3": "^7.9.0",
+		"date-fns": "^4.1.0",
+		"ethers": "5",
+		"next": "14.2.13",
+		"react": "^18",
+		"react-chartjs-2": "^5.2.0",
+		"react-dom": "^18",
+		"react-icons": "^5.3.0",
+		"reactflow": "^11.11.4",
+		"tailwind-merge": "^2.5.2"
+	},
+	"devDependencies": {
+		"@testing-library/jest-dom": "^6.6.2",
+		"@testing-library/react": "^16.0.1",
+		"@testing-library/user-event": "^14.5.2",
+		"@types/jest": "^29.5.14",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"@typescript-eslint/eslint-plugin": "^8.12.2",
+		"@typescript-eslint/parser": "^8.12.2",
+		"eslint": "^8",
+		"eslint-config-next": "^15.0.2",
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.2.1",
+		"eslint-plugin-unused-imports": "^4.1.4",
+		"husky": "^9.1.6",
+		"jest": "^29.7.0",
+		"jest-environment-jsdom": "^29.7.0",
+		"lint-staged": "^15.2.10",
+		"postcss": "^8",
+		"prettier": "3.3.3",
+		"prettier-plugin-tailwindcss": "^0.6.8",
+		"tailwindcss": "^3.4.1",
+		"ts-jest": "^29.2.5",
+		"ts-node": "^10.9.2",
+		"typescript": "^5"
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "lint-staged"
+		}
+	},
+	"lint-staged": {
+		"*.{js,jsx,ts,tsx,json,css,scss,md}": [
+			"eslint --fix",
+			"prettier --write"
+		]
+	}
 }
