--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"@ethersproject/providers": "^5.7.2",
 		"@radix-ui/react-checkbox": "^1.1.1",
+		"@radix-ui/react-context-menu": "^2.2.2",
 		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-slider": "^1.2.1",
