--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
 		"@radix-ui/react-slider": "^1.2.1",
 		"@tailwindcss/typography": "^0.5.15",
+		"@xyflow/react": "^12.3.4",
 		"chart.js": "^4.4.6",
 		"chartjs-adapter-date-fns": "^3.0.0",
 		"clsx": "^2.1.1",
