--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
 		"react-dom": "^18",
 		"react-icons": "^5.3.0",
 		"reactflow": "^11.11.4",
-		"tailwind-merge": "^2.5.2"
+		"tailwind-merge": "^2.5.2",
+		"zustand": "^5.0.1"
 	},
 	"devDependencies": {
 		"@testing-library/jest-dom": "^6.6.2",
