--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,6 +48,7 @@
 		"no-unused-vars": "warn",
 		"unused-imports/no-unused-vars": "warn",
 		"unused-imports/no-unused-imports": "warn",
+		"no-constant-condition": "off",
 		"@typescript-eslint/no-unused-vars": [
 			"warn",
 			{
