--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	},
 	"dependencies": {
 		"@ethersproject/providers": "^5.7.2",
+		"@material-tailwind/react": "^2.1.10",
 		"@radix-ui/react-checkbox": "^1.1.1",
 		"@radix-ui/react-context-menu": "^2.2.2",
 		"@radix-ui/react-dialog": "^1.1.2",
@@ -37,6 +38,7 @@
 		"react-dom": "^18",
 		"react-icons": "^5.3.0",
 		"reactflow": "^11.11.4",
+		"swiper": "^11.1.14",
 		"tailwind-merge": "^2.5.2",
 		"zustand": "^5.0.1"
 	},
