--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"d3": "^7.9.0",
 		"date-fns": "^4.1.0",
 		"ethers": "5",
+		"framer-motion": "^11.11.17",
 		"next": "14.2.13",
 		"react": "^18",
 		"react-chartjs-2": "^5.2.0",
