--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
 		"@radix-ui/react-context-menu": "^2.2.2",
 		"@radix-ui/react-dialog": "^1.1.2",
 		"@radix-ui/react-dropdown-menu": "^2.1.2",
+		"@radix-ui/react-label": "^2.1.0",
+		"@radix-ui/react-select": "^2.1.2",
 		"@radix-ui/react-slider": "^1.2.1",
+		"@radix-ui/react-tabs": "^1.1.1",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tanstack/react-query": "^5.59.19",
 		"@xyflow/react": "^12.3.4",
@@ -37,6 +40,8 @@
 		"react": "^18",
 		"react-chartjs-2": "^5.2.0",
 		"react-dom": "^18",
+		"react-hook": "^0.0.1",
+		"react-hook-form": "^7.53.2",
 		"react-icons": "^5.3.0",
 		"reactflow": "^11.11.4",
 		"swiper": "^11.1.14",
