--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/global.d.ts"
+    "src/global.d.ts",
   ],
   "exclude": ["node_modules"]
 }
