Update Activities Calendar

--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
 		"next": "14.2.13",
 		"react": "^18",
 		"react-chartjs-2": "^5.2.0",
+		"react-datepicker": "^7.5.0",
 		"react-dom": "^18",
 		"react-hook": "^0.0.1",
 		"react-hook-form": "^7.53.2",
