--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"@radix-ui/react-select": "^2.1.2",
 		"@radix-ui/react-slider": "^1.2.1",
 		"@radix-ui/react-tabs": "^1.1.1",
+		"@radix-ui/react-toast": "^1.2.2",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tanstack/react-query": "^5.59.19",
 		"@xyflow/react": "^12.3.4",
