--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
 		"reactflow": "^11.11.4",
 		"swiper": "^11.1.14",
 		"tailwind-merge": "^2.5.2",
+		"viem": "2.21.41",
+		"wagmi": "2.12.11",
 		"zustand": "^5.0.1"
 	},
 	"devDependencies": {
