--- a/package.json
+++ b/package.json
@@ -35,9 +35,11 @@
 		"clsx": "^2.1.1",
 		"d3": "^7.9.0",
 		"date-fns": "^4.1.0",
+		"encoding": "^0.1.13",
 		"ethers": "5",
 		"framer-motion": "^11.11.17",
 		"next": "14.2.13",
+		"pino-pretty": "^13.0.0",
 		"react": "^18",
 		"react-chartjs-2": "^5.2.0",
 		"react-datepicker": "^7.5.0",
