--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@radix-ui/react-toast": "^1.2.2",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tanstack/react-query": "^5.59.19",
+		"@wagmi/core": "^2.15.0",
 		"@xyflow/react": "^12.3.4",
 		"chart.js": "^4.4.6",
 		"chartjs-adapter-date-fns": "^3.0.0",
