--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"@radix-ui/react-slider": "^1.2.1",
 		"@radix-ui/react-tabs": "^1.1.1",
 		"@radix-ui/react-toast": "^1.2.2",
+		"@radix-ui/react-toggle-group": "^1.1.0",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tanstack/react-query": "^5.59.19",
 		"@wagmi/core": "^2.15.0",
