--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 		"@radix-ui/react-tabs": "^1.1.1",
 		"@radix-ui/react-toast": "^1.2.2",
 		"@radix-ui/react-toggle-group": "^1.1.0",
+		"@radix-ui/react-tooltip": "^1.1.4",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tanstack/react-query": "^5.59.19",
 		"@wagmi/core": "^2.15.0",
