--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"ethers": "5",
 		"framer-motion": "^11.11.17",
 		"next": "14.2.13",
+		"next-auth": "^4.24.11",
 		"pino-pretty": "^13.0.0",
 		"react": "^18",
 		"react-chartjs-2": "^5.2.0",
