--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 	"dependencies": {
 		"@ethersproject/providers": "^5.7.2",
 		"@material-tailwind/react": "^2.1.10",
+		"@next-auth/prisma-adapter": "^1.0.7",
 		"@prisma/client": "^6.0.1",
 		"@radix-ui/react-checkbox": "^1.1.1",
 		"@radix-ui/react-context-menu": "^2.2.2",
@@ -65,12 +66,14 @@
 		"@testing-library/jest-dom": "^6.6.2",
 		"@testing-library/react": "^16.0.1",
 		"@testing-library/user-event": "^14.5.2",
+		"@types/bcrypt": "^5.0.2",
 		"@types/jest": "^29.5.14",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
 		"@typescript-eslint/eslint-plugin": "^8.12.2",
 		"@typescript-eslint/parser": "^8.12.2",
+		"bcrypt": "^5.1.1",
 		"eslint": "^8",
 		"eslint-config-next": "^15.0.2",
 		"eslint-config-prettier": "^9.1.0",
