--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"@tanstack/react-query": "^5.59.19",
 		"@wagmi/core": "^2.15.0",
 		"@xyflow/react": "^12.3.4",
+		"axios": "^1.7.9",
 		"chart.js": "^4.4.6",
 		"chartjs-adapter-date-fns": "^3.0.0",
 		"clsx": "^2.1.1",
