Complete Login&Signup

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"encoding": "^0.1.13",
 		"ethers": "5",
 		"framer-motion": "^11.11.17",
+		"jsonwebtoken": "^9.0.2",
 		"next": "14.2.13",
 		"next-auth": "^4.24.11",
 		"pg": "^8.13.1",
@@ -69,6 +70,7 @@
 		"@testing-library/user-event": "^14.5.2",
 		"@types/bcrypt": "^5.0.2",
 		"@types/jest": "^29.5.14",
+		"@types/jsonwebtoken": "^9.0.7",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
