--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "next dev",
-		"build": "next build",
+		"build": "prisma generate && next build",
 		"start": "next start",
 		"lint": "next lint",
 		"test": "jest --passWithNoTests",
@@ -49,7 +49,6 @@
 		"next-auth": "^4.24.11",
 		"pg": "^8.13.1",
 		"pino-pretty": "^13.0.0",
-		"prisma": "^6.0.1",
 		"react": "^18",
 		"react-chartjs-2": "^5.2.0",
 		"react-datepicker": "^7.5.0",
@@ -89,6 +88,7 @@
 		"postcss": "^8",
 		"prettier": "3.3.3",
 		"prettier-plugin-tailwindcss": "^0.6.8",
+		"prisma": "^6.1.0",
 		"tailwindcss": "^3.4.1",
 		"ts-jest": "^29.2.5",
 		"ts-node": "^10.9.2",
