Add useWallet Test

--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
 		"@radix-ui/react-tooltip": "^1.1.4",
 		"@tailwindcss/typography": "^0.5.15",
 		"@tanstack/react-query": "^5.59.19",
+		"@testing-library/react-hooks": "^8.0.1",
 		"@wagmi/core": "^2.15.0",
 		"@xyflow/react": "^12.3.4",
 		"axios": "^1.7.9",
@@ -65,6 +66,9 @@
 		"zustand": "^5.0.1"
 	},
 	"devDependencies": {
+		"@babel/preset-env": "^7.26.0",
+		"@babel/preset-react": "^7.26.3",
+		"@babel/preset-typescript": "^7.26.0",
 		"@testing-library/jest-dom": "^6.6.2",
 		"@testing-library/react": "^16.0.1",
 		"@testing-library/user-event": "^14.5.2",
@@ -76,6 +80,7 @@
 		"@types/react-dom": "^18",
 		"@typescript-eslint/eslint-plugin": "^8.12.2",
 		"@typescript-eslint/parser": "^8.12.2",
+		"babel-jest": "^29.7.0",
 		"bcrypt": "^5.1.1",
 		"eslint": "^8",
 		"eslint-config-next": "^15.0.2",
