--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
 		"zustand": "^5.0.1"
 	},
 	"devDependencies": {
-		"@babel/preset-env": "^7.26.0",
+		"@babel/core": "^7.26.7",
+		"@babel/preset-env": "^7.26.7",
 		"@babel/preset-react": "^7.26.3",
 		"@babel/preset-typescript": "^7.26.0",
 		"@testing-library/jest-dom": "^6.6.2",
@@ -90,6 +91,7 @@
 		"husky": "^9.1.6",
 		"jest": "^29.7.0",
 		"jest-environment-jsdom": "^29.7.0",
+		"jest-esm-transformer": "^1.0.0",
 		"lint-staged": "^15.2.10",
 		"postcss": "^8",
 		"prettier": "3.3.3",
@@ -113,5 +115,6 @@
 			"eslint --fix",
 			"prettier --write"
 		]
-	}
+	},
+	"type": "module"
 }
