--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,7 +28,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "src/global.d.ts", "src/hooks/useWallet.test.tsa",
+    "src/global.d.ts", "src/hooks/useWallet.test.ts", "src/utils/color.test.ts",
   ],
   "exclude": ["node_modules"]
 }
