Add Zoom Out for Analytics

--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"axios": "^1.7.9",
 		"chart.js": "^4.4.6",
 		"chartjs-adapter-date-fns": "^3.0.0",
+		"chartjs-plugin-zoom": "^2.2.0",
 		"clsx": "^2.1.1",
 		"d3": "^7.9.0",
 		"date-fns": "^4.1.0",
