--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"eslint": "eslint . --ext .js,.jsx,.ts,.tsx"
 	},
 	"dependencies": {
+		"@babel/plugin-proposal-do-expressions": "^7.27.1",
 		"@ethersproject/providers": "^5.7.2",
 		"@material-tailwind/react": "^2.1.10",
 		"@next-auth/prisma-adapter": "^1.0.7",
@@ -117,6 +118,5 @@
 			"eslint --fix",
 			"prettier --write"
 		]
-	},
-	"type": "module"
+	}
 }
