--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
 		"react-chartjs-2": "^5.2.0",
 		"react-datepicker": "^7.5.0",
 		"react-dom": "^18",
+		"react-error-boundary": "^6.0.0",
 		"react-hook": "^0.0.1",
 		"react-hook-form": "^7.53.2",
 		"react-icons": "^5.3.0",
