--- a/.gitignore
+++ b/.gitignore
@@ -27,8 +27,12 @@ yarn-error.log*
 
 # local env files
 .env*.local
+.env.local
 .env
+.env.development
 .env.production
+.env.test
+.env.staging
 # vercel
 .vercel
 
