--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
 		"react-hook": "^0.0.1",
 		"react-hook-form": "^7.53.2",
 		"react-icons": "^5.3.0",
+		"react-jazzicon": "^1.0.4",
 		"reactflow": "^11.11.4",
 		"swiper": "^11.1.14",
 		"tailwind-merge": "^2.5.2",
